--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -182,7 +182,7 @@ behind QOF, including the relationships between &quot;database-driven&quot;,
 &quot;program-driven&quot; and &quot;data-centric&quot; ming explored at
 <a href="http://www.data-freedom.org/explain.html">Data-Freedom.org</a>.
 
-* Provide an object framework that allows progammers to create expressive
+* Provide an object framework that allows programmers to create expressive
 queries that will search through a collection of objects, returning the desired
 set of objects.
 
