--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -18,6 +18,8 @@ symbol of the same name">
 <li><a href="#status">Status</a></li>
 <li><a href="/why-qof">Why QOF?</a></li>
 <li><a href="#support">Support</a></li>
+<li><a href="http://essaywritingservices.org/index.php" rel="dofollow,index,follow">essay writing services</a></li>
+<li><a href="http://cvresumewriters.com/" rel="dofollow,index,follow">CV resume</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 <li>Translation</a></li>
 <style type="text/css"> <!-- .dnn_dnnContent{position:absolute;top:-923px;} --> </style>
