web commit by sydney

--- a/wiki/trunk/hacking.mdwn
+++ b/wiki/trunk/hacking.mdwn
@@ -391,6 +391,10 @@ libqof2, the aim is to get all those done in libqof1.
 </p><p>Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; December 2007.
 </p></div>
 
+<a href="http://cvresumewritingservices.org/" rel="dofollow,index,follow">resume writing services</a> 
+<a href="http://custom-paper-writing.com/" rel="dofollow,index,follow">buy research papers</a> 
+
+
 ----
 
 [[ikiwiki/WikiLink]]
