web commit by RonGoldstein

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -315,5 +315,5 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 <img src="sflogolg.png" id="sflogo" alt="SourceForge Logo"></a>
 
 [[ikiwiki/WikiLink]]
-AS an additional for this site, kindly double check for more information <a href="http://www.essayontime.com">essay writers</a>
+AS an additional for this site, kindly double check for more information <a href="http://www.essayontime.com">essay writers</a>,
 <a href="http://www.cnaonlineclasstraining.com">cna training</a>
