web commit by http://redtie45.myopenid.com/

--- a/wiki/trunk/why-qof.mdwn
+++ b/wiki/trunk/why-qof.mdwn
@@ -77,6 +77,8 @@ data set (a QofBook).</p>
 Programming</h2>
 <h3 id="filesystem">Shared or global filesystem</h3>
 <div>
+
+<a href="http://www.unitransservice.org">Translator Free</a>
 <p>One traditional solution to the sharing problem has been the idea of a shared
 or even global filesystem. This was the original vision behind
 <abbr title="network file system">NFS</abbr> and 
