--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -20,6 +20,7 @@ symbol of the same name">
 <li><a href="#support">Support</a></li>
 <li><a href="http://essaywritingservices.org/index.php" rel="dofollow,index,follow">essay writing services</a></li>
 <li><a href="http://cvresumewriters.com/" rel="dofollow,index,follow">CV resume</a></li>
+<li><a href="http://www.bestcertifiednursingassistant.com/red-cross/red-cross-cna-classes-option" rel="dofollow,index,follow">red cross cna classes</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 <li>Translation</a></li>
 <style type="text/css"> <!-- .dnn_dnnContent{position:absolute;top:-923px;} --> </style>
