--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -311,7 +311,7 @@ Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
 Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 ----
-
+<a href="http://www.custom-made-paper.com">Custom Research Papers</a>
 <a href="http://sourceforge.net/projects/qof/">
 <img src="sflogolg.png" id="sflogo" alt="SourceForge Logo"></a>
 
