web commit by reckoner07

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -22,10 +22,26 @@ symbol of the same name">
 <li><a href="http://cvresumewriters.com/" rel="dofollow,index,follow">CV resume</a></li>
 <li><a href="http://www.bestcertifiednursingassistant.com/red-cross/red-cross-cna-classes-option" rel="dofollow,index,follow">red cross cna classes</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
+
+
 <li>Translation</a></li>
 <style type="text/css"> <!-- .dnn_dnnContent{position:absolute;top:-923px;} --> </style>
 
 </ul>
+
+<p><em><strong>Other Links</strong></em></p>
+
+<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=female">Female Tattoo Designs</a></p>
+<p><a href="http://www.smalltattoosdesigns.com/">Small Tattoos</a></p>
+<p><a href="http://www.hairstylescutsimages.com/">Hairstyles Cuts</a></p>
+<p><a href="http://www.hairstylescutsimages.com/femalehairstyles.htm">Female Hairstyles</a></p>
+<p><a href="http://www.hairstylescutsimages.com/malehairstyles.htm">Men Hairstyles</a></p>
+<p><a href="http://www.funny-animated.com/">Funny Animations</a></p>
+<p><a href="http://www.bestowseosolutions.com/">SEO Company</a></p>
+<p><a href="http://www.bestowseosolutions.com/seopackages.asp">SEO Packages</a></p>
+<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=male">Male Tattoos</a></p>
+<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=children">Children Tattoos</a></p>
+
 </div>
 
 ## <span id="intro">Introduction</span>
