--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -20,7 +20,7 @@ symbol of the same name">
 <li><a href="#support">Support</a></li>
 <li><a href="http://essaywritingservices.org/index.php" rel="dofollow,index,follow">essay writing services</a></li>
 <li><a href="http://cvresumewriters.com/" rel="dofollow,index,follow">CV resume</a></li>
-<li><a href="http://www.bestcertifiednursingassistant.com/red-cross/red-cross-cna-classes-option" rel="dofollow,index,follow">red cross cna classes</a></li>
+<li><a href="http://www.cnaonlineclasstraining.com/" rel="dofollow,index,follow">cna training</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 
 
@@ -31,16 +31,7 @@ symbol of the same name">
 
 <p><em><strong>Other Links</strong></em></p>
 
-<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=female">Female Tattoo Designs</a></p>
-<p><a href="http://www.smalltattoosdesigns.com/">Small Tattoos</a></p>
-<p><a href="http://www.hairstylescutsimages.com/">Hairstyles Cuts</a></p>
-<p><a href="http://www.hairstylescutsimages.com/femalehairstyles.htm">Female Hairstyles</a></p>
-<p><a href="http://www.hairstylescutsimages.com/malehairstyles.htm">Men Hairstyles</a></p>
-<p><a href="http://www.funny-animated.com/">Funny Animations</a></p>
-<p><a href="http://www.bestowseosolutions.com/">SEO Company</a></p>
-<p><a href="http://www.bestowseosolutions.com/seopackages.asp">SEO Packages</a></p>
-<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=male">Male Tattoos</a></p>
-<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=children">Children Tattoos</a></p>
+
 
 </div>
 
