web commit by http://mike3050.myopenid.com/

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -19,6 +19,7 @@ symbol of the same name">
 <li><a href="/why-qof">Why QOF?</a></li>
 <li><a href="#support">Support</a></li>
 <li><a href="http://essaywritingservices.org/index.php" rel="dofollow,index,follow">essay writing services</a></li>
+<li><a href="http://zolpo.com/">Insurance Quotes</a></li>
 <li><a href="http://cvresumewriters.com/" rel="dofollow,index,follow">CV resume</a></li>
 <li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
 
