--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -329,4 +329,4 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 <img src="sflogolg.png" id="sflogo" alt="SourceForge Logo"></a>
 
 [[ikiwiki/WikiLink]]
-AS an additional for this site, kindly double check for more information <a href="http://zolpo.com/">insurance quotes</a>,
+AS an additional for this site, kindly double check for more information,
