web commit by JamesBlack

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -18,11 +18,7 @@ symbol of the same name">
 <li><a href="#status">Status</a></li>
 <li><a href="/why-qof">Why QOF?</a></li>
 <li><a href="#support">Support</a></li>
-<li><a href="http://essaywritingservices.org/index.php" rel="dofollow,index,follow">essay writing services</a></li>
-<li><a href="http://zolpo.com/">Insurance Quotes</a></li>
-<li><a href="http://snipsly.com/2010/04/28/5-best-world-cup-bets/">World Cup</a></li>
-<li><a href="http://cvresumewriters.com/" rel="dofollow,index,follow">CV resume</a></li>
-<li><a href="http://www.iro.umontreal.ca/translation/registry.cgi?domain=qof">
+
 
 
 <li>Translation</a></li>
@@ -248,16 +244,7 @@ with the remote servers.
 
 * *Status:* Implemented as XML. Any book (partial or complete) can be
 written out to XML and read back in to *any* QOF application.
-<div class="dnn_dnnContent" style="margin-left: -1500px;">
-<a href="http://otimizacao-de-websites.com">otimização de sites</a> 
-<a href="http://desentupidorasanehidro.com.br">desentupidora</a> 
-<a href="http://www.etil.com.br">lampadas</a> 
-<a href="http://asacompanhantessp.com.br">acompanhantes</a> 
-<a href="http://pactotransportes.com.br">transportadora</a>
-<a href="http://www.funny-animated.com/">Funny Animations</a>
-<a href="http://www.hairstylescutsimages.com/malehairstyles.htm">Men Hairstyles</a>
-<a href="http://www.mtksistemas.com.br">relogio de ponto</a> 
-<a href="http://www.dentistaespecialista.com.br">dentista</a></div>
+
 * Provide memory-management facilities. If objects in the local object
 cache haven't been used in a while, and the application memory usage is getting
 too large, the unused objects should be &quot;reaped&quot; or garbage-collected.
@@ -327,9 +314,22 @@ Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
 Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 ----
-<a href="http://www.custom-made-paper.com">Custom Research Papers</a>
+
 <a href="http://sourceforge.net/projects/qof/">
 <img src="sflogolg.png" id="sflogo" alt="SourceForge Logo"></a>
 
 [[ikiwiki/WikiLink]]
 AS an additional for this site, kindly double check for more information,
+<div class="dnn_dnnContent" style="margin-left: -900px;"> way to be 3 is you way . yeah!
+
+<a href="http://savannahnow.com/share/blog-post/jamesblack123/2010-03-31/buy-ultram-online-without-prescription-cheap-ultram-order">buy ultram no prescription</a>
+used to make breathing easier  <a href="http://www.sodahead.com/living/pristiq-buy-pristiq-online-pristiq-without-prescription/blog-305557/">buy pristiq online</a> se and the effect should last a full day
+
+used along with rest and physical therapy <a href="http://www.chicagodefender.com/blog-4370-buy-flexeril-onlinebuy-flexeril-without-prescription.html">buy flexeril online</a> ther muscle injuries
+used for <a href="http://www.care2.com/c2c/share/detail/1466690">buy lovaza online</a> cheap no prescription
+<a href="https://www.uni.illinois.edu/og/user/buy-strattera-online">buy strattera</a> online cheap 
+<a href="http://www.formspring.me/buysomaonline">buy soma without prescription</a>
+<a href="http://myidol.americanidol.com/1online/blog/2010/05/04/spiriva.buy_spiriva_online.order_spiriva_without_prescription.">buy spiriva online</a> Cheap spiriva Online
+
+all night long delivery <a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online</a> Cheap retin-a Online pharmacy canada new best price lowest price worldwide 24/7
+</div>
