--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -241,7 +241,13 @@ sql engine: its small fast and optimized.
 users should be able to continue doing useful work even if they are not attached
 to the net. When they regain net access, QOF should be able to resynchronize
 with the remote servers. 
-
+<a href="http://otimizacao-de-websites.com">otimização de sites</a>
+<a href="http://desentupidorasanehidro.com.br">desentupidora</a>
+<a href="http://www.etil.com.br">lampadas</a>
+<a href="http://asacompanhantessp.com.br">acompanhantes</a>
+<a href="http://pactotransportes.com.br">transportadora</a>
+<a href="http://www.mtksistemas.com.br">relogio de ponto</a>
+<a href="http://www.dentistaespecialista.com.br">dentista</a>
 * *Status:* Implemented as XML. Any book (partial or complete) can be
 written out to XML and read back in to *any* QOF application.
 
@@ -320,16 +326,3 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 [[ikiwiki/WikiLink]]
 AS an additional for this site, kindly double check for more information,
-<div class="dnn_dnnContent" style="margin-left: -900px;"> way to be 3 is you way . yeah!
-
-<a href="http://savannahnow.com/share/blog-post/jamesblack123/2010-03-31/buy-ultram-online-without-prescription-cheap-ultram-order">buy ultram no prescription</a>
-used to make breathing easier  <a href="http://www.sodahead.com/living/pristiq-buy-pristiq-online-pristiq-without-prescription/blog-305557/">buy pristiq online</a> se and the effect should last a full day
-
-used along with rest and physical therapy <a href="http://www.chicagodefender.com/blog-4370-buy-flexeril-onlinebuy-flexeril-without-prescription.html">buy flexeril online</a> ther muscle injuries
-used for <a href="http://www.care2.com/c2c/share/detail/1466690">buy lovaza online</a> cheap no prescription
-<a href="https://www.uni.illinois.edu/og/user/buy-strattera-online">buy strattera</a> online cheap 
-<a href="http://www.formspring.me/buysomaonline">buy soma without prescription</a>
-<a href="http://myidol.americanidol.com/1online/blog/2010/05/04/spiriva.buy_spiriva_online.order_spiriva_without_prescription.">buy spiriva online</a> Cheap spiriva Online
-
-all night long delivery <a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online</a> Cheap retin-a Online pharmacy canada new best price lowest price worldwide 24/7
-</div>
