web commit by deepak2413483

--- a/wiki/trunk/why-qof.mdwn
+++ b/wiki/trunk/why-qof.mdwn
@@ -2,7 +2,7 @@ We are an organized group of writers who specialize in producing custom academic
 
 
 
- <a herf="http://www.anypapers.com">Essay Writing</a>
+ <a href="http://www.anypapers.com">Essay Writing</a>
 
 
 
