--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -321,3 +321,4 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 [[ikiwiki/WikiLink]]
 AS an additional for this site, kindly double check for more information,
+<hr><p><a href=http://www.bestowseosolutions.com/seopackages.asp>SEO Packages</a></p>
