web commit by Limon460

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,4 +1,4 @@
 Looking for the perfect job? If you are, then you first need to consider the quality of your resume that you plan on submitting to your dream company. Whatever you submit as basis for your credentials will create the companys impression of who you are. Thus, there is a need to learn the proper way of writing resumes, curriculum vitae and cover letters. These three main documents reveal basically reveal your personal information and your desire to become a part of the company.
 
-
-[[http://www.careerwatcher.org | Resume Writers]]	
+	
+<a href="http://www.careerwatcher.org">Resume Writers</a>	
