--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,4 +1,61 @@
-Looking for the perfect job? If you are, then you first need to consider the quality of your resume that you plan on submitting to your dream company. Whatever you submit as basis for your credentials will create the companys impression of who you are. Thus, there is a need to learn the proper way of writing resumes, curriculum vitae and cover letters. These three main documents reveal basically reveal your personal information and your desire to become a part of the company.
-
-
-<a href="http://www.careerwatcher.org">Resume Writing</a>	
+-We are an organized group of writers who specialize in producing custom academic papers of the highest quality. We also provide many other services including editing, review and translation. Our aim is to become the best, most trusted and preferred site for those who seek excellent academic papers. We provide our clients with ability to fulfill their writing needs with a standard that is unmatched.   <a href="http://www.anypapers.com"> Essay Writing </a>
+-
+-
+-
+-
+ <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
+ symbol of the same name">
+ 
+@@ -232,7 +227,7 @@
+ using ODBC. Unfortunately, although work has begun to use libgda, the current
+ gnome-db stable release does not support creating (or deleting) tables for. The
+ module is now under active development as part of the transition to libqof2.
+-<a href="http://www.assembla.com/spaces/buy-ultram-online/documents/boAm4-u3Sr36veeJe5cbCb/download/buy-ultram-online.htm">buy ultram online</a>
++
+ * The current 'client-side' SQL engine is rather basic in its features and
+ performance.
+  For example, the current search over object fields is O(N),
+@@ -246,7 +241,13 @@
+ users should be able to continue doing useful work even if they are not attached
+ to the net. When they regain net access, QOF should be able to resynchronize
+ with the remote servers. 
+-
++<a href="http://otimizacao-de-websites.com">otimizaÃ§Ã£o de sites</a>
++<a href="http://desentupidorasanehidro.com.br">desentupidora</a>
++<a href="http://www.etil.com.br">lampadas</a>
++<a href="http://asacompanhantessp.com.br">acompanhantes</a>
++<a href="http://pactotransportes.com.br">transportadora</a>
++<a href="http://www.mtksistemas.com.br">relogio de ponto</a>
++<a href="http://www.dentistaespecialista.com.br">dentista</a>
+ * *Status:* Implemented as XML. Any book (partial or complete) can be
+ written out to XML and read back in to *any* QOF application.
+ 
+@@ -273,7 +274,7 @@
+ <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
+ <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
+ and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
+-all night long delivery <a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online</a>
++
+ ### Ubuntu
+ 
+ All releases since Dapper have included QOF. Feisty is the
+@@ -289,7 +290,6 @@
+ There is a sample .spec file available in QOF CVS, available have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.
+ 
+ ### Mac OSX &amp; Fink
+-<a href="http://www.formspring.me/buysomaonline">buy soma without prescription</a>
+ 
+ Packages are also possible for Fink and DarwinPorts (Mac OSX) - a sample Finkinfo file
+ is provided in QOF CVS via
+@@ -308,11 +308,6 @@
+ * <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
+ 
+ 
+-
+-
+-
+-
+-
+ ----
+ 
+ Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
