--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -30,6 +30,8 @@
 +<a href="http://chris251984.buzznet.com/user/">Chris</a>
 +<a href="http://www.mtksistemas.com.br">relogio de ponto</a>
 +<a href="http://www.dentistaespecialista.com.br">dentista</a>
++<a href="http://www.graficacdc.com.br/cracha-em-pvc-salvador">Crachas em PVC</a>
++<a href="http://www.pousadaoninho.com.br">Pousada em Salvador</a>
 +<a href="http://www.crossvending.com">vending machine</a>
 </div>
  * *Status:* Implemented as XML. Any book (partial or complete) can be
