--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,3 +1,5 @@
+Why don't you buy a <a href="http://www.murano-glass-chandeliers.com">murano glass chandelier</a> and <a href="http://www.900veneziano.com">masqurade mask</a>. They're so gorgeous!
+
 -We are an organized group of writers who specialize in producing custom academic papers of the highest quality. We also provide many other services including editing, review and translation. Our aim is to become the best, most trusted and preferred site for those who seek excellent academic papers. We provide our clients with ability to fulfill their writing needs with a standard that is unmatched.   <a href="http://www.anypapers.com"> Essay Writing </a>
 -
 -
