web commit by http://echealthinsurance.myopenid.com/

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -33,6 +33,9 @@ Why don't you buy a <a href="http://www.murano-glass-chandeliers.com">murano gla
 +<a href="http://www.mtksistemas.com.br">relogio de ponto</a>
 +<a href="http://www.dentistaespecialista.com.br">dentista</a>
 +<a href="http://www.graficacdc.com.br/cracha-em-pvc-salvador">Crachas em PVC</a>
++<a href="http://ecautoinsurance.com/">Auto Insurance Quote</a>
++<a href="http://www.vortexpa.com">Public Adjuster</a>
++<a href="http://echealthinsurance.com/">Health Insurance</a>
 +<a href="http://www.pousadaoninho.com.br">Pousada em Salvador</a>
 +<a href="http://www.crossvending.com">vending machine</a>
 </div>
