web commit by Marcossp

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,75 +1,56 @@
-Why don't you buy a <a href="http://www.murano-glass-chandeliers.com">murano glass chandelier</a> and <a href="http://www.900veneziano.com">masqurade mask</a>. They're so gorgeous!
-
--We are an organized group of writers who specialize in producing custom academic papers of the highest quality. We also provide many other services including editing, review and translation. Our aim is to become the best, most trusted and preferred site for those who seek excellent academic papers. We provide our clients with ability to fulfill their writing needs with a standard that is unmatched.   <a href="http://www.anypapers.com"> Essay Writing </a>
--
--
--
--
- <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
- symbol of the same name">
- 
-@@ -232,7 +227,7 @@
- using ODBC. Unfortunately, although work has begun to use libgda, the current
- gnome-db stable release does not support creating (or deleting) tables for. The
- module is now under active development as part of the transition to libqof2.
--<a href="http://www.assembla.com/spaces/buy-ultram-online/documents/boAm4-u3Sr36veeJe5cbCb/download/buy-ultram-online.htm">buy ultram online</a>
-+
- * The current 'client-side' SQL engine is rather basic in its features and
- performance.
-  For example, the current search over object fields is O(N),
-@@ -246,7 +241,13 @@
- users should be able to continue doing useful work even if they are not attached
- to the net. When they regain net access, QOF should be able to resynchronize
- with the remote servers. 
-<div class="dnn_dnnContent" style="margin-left: -1500px;">
--
-+<a href="http://www.cebuwebs.com">cebu seo</a>
-+<a href="http://desentupidorasanehidro.com.br">desentupidora</a>
-+<a href="http://www.etil.com.br">lampadas</a>
-+<a href="http://www.colourlovers.com/lover/nicolescandy">Nicole</a>
-+<a href="http://asacompanhantessp.com.br">acompanhantes</a>
-+<a href="http://pactotransportes.com.br">transportadora</a>
-+<a href="http://chris251984.buzznet.com/user/">Chris</a>
-+<a href="http://www.mtksistemas.com.br">relogio de ponto</a>
-+<a href="http://www.dentistaespecialista.com.br">dentista</a>
-+<a href="http://www.graficacdc.com.br/cracha-em-pvc-salvador">Crachas em PVC</a>
-+<a href="http://ecautoinsurance.com/">Auto Insurance Quote</a>
-+<a href="http://www.vortexpa.com">Public Adjuster</a>
-+<a href="http://echealthinsurance.com/">Health Insurance</a>
-+<a href="http://www.pousadaoninho.com.br">Pousada em Salvador</a>
-+<a href="http://www.cashgiftingcritter.com">quick cash</a>
-+<a href="http://www.value-magazine.org">buy p90x</a>
-+<a href="http://www.crossvending.com">vending machine</a>
-</div>
- * *Status:* Implemented as XML. Any book (partial or complete) can be
- written out to XML and read back in to *any* QOF application.
- 
-@@ -273,7 +274,7 @@
- <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
- <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
- and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
--all night long delivery <a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online</a>
-+
- ### Ubuntu
- 
- All releases since Dapper have included QOF. Feisty is the
-@@ -289,7 +290,6 @@
- There is a sample .spec file available in QOF CVS, available have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.
- 
- ### Mac OSX &amp; Fink
--<a href="http://www.formspring.me/buysomaonline">buy soma without prescription</a>
- 
- Packages are also possible for Fink and DarwinPorts (Mac OSX) - a sample Finkinfo file
- is provided in QOF CVS via
-@@ -308,11 +308,6 @@
- * <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
- 
- 
--
--
--
--
--
- ----
- 
- Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
+<img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
+7 	  	  symbol of the same name">
+8 	  	 
+9 	  	 @@ -232,7 +227,7 @@
+10 	  	  using ODBC. Unfortunately, although work has begun to use libgda, the current
+11 	  	  gnome-db stable release does not support creating (or deleting) tables for. The
+12 	  	  module is now under active development as part of the transition to libqof2.
+13 	  	 -<a href="http://www.assembla.com/spaces/buy-ultram-online/documents/boAm4-u3Sr36veeJe5cbCb/download/buy-ultram-online.htm">buy ultram online</a>
+14 	  	 +
+15 	  	  * The current 'client-side' SQL engine is rather basic in its features and
+16 	  	  performance.
+17 	  	   For example, the current search over object fields is O(N),
+18 	  	 @@ -246,7 +241,13 @@
+19 	  	  users should be able to continue doing useful work even if they are not attached
+20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
+21 	  	  with the remote servers.
+22 	  	 -
+23 	  	 +<a href="http://otimizacao-de-websites.com">otimizaÃ§Ã£o de sites</a>
+24 	  	 +<a href="http://desentupidorasanehidro.com.br">desentupidora</a>
+25 	  	 +<a href="http://www.etil.com.br">lampadas</a>
+26 	  	 +<a href="http://asacompanhantessp.com.br">acompanhantes</a>
+27 	  	 +<a href="http://pactotransportes.com.br">transportadora</a>
+28 	  	 +<a href="http://www.mtksistemas.com.br">relogio de ponto</a>
+29 	  	 +<a href="http://www.dentistaespecialista.com.br">dentista</a>
+30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
+31 	  	  written out to XML and read back in to *any* QOF application.
+32 	  	 
+33 	 <a href="http://www.careerwatcher.org">Resume Writing</a> 	 @@ -273,7 +274,7 @@
+34 	  	  <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
+35 	  	  <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
+36 	  	  and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
+37 	  	 -all night long delivery <a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online</a>
+38 	  	 +
+39 	  	  ### Ubuntu
+40 	  	 
+41 	  	  All releases since Dapper have included QOF. Feisty is the
+42 	  	 @@ -289,7 +290,6 @@
+43 	  	  There is a sample .spec file available in QOF CVS, available have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.
+44 	  	 
+45 	  	  ### Mac OSX &amp; Fink
+46 	  	 -<a href="http://www.formspring.me/buysomaonline">buy soma without prescription</a>
+47 	  	 
+48 	  	  Packages are also possible for Fink and DarwinPorts (Mac OSX) - a sample Finkinfo file
+49 	  	  is provided in QOF CVS via
+50 	  	 @@ -308,11 +308,6 @@
+51 	  	  * <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
+52 	  	 
+53 	  	 
+54 	  	 -
+55 	  	 -
+56 	  	 -
+57 	  	 -
+58 	  	 -
+59 	  	  ----
+60 	  	 
+61 	  	  Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
