web commit by Marcossp

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -15,7 +15,7 @@
 20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote servers.
 22 	  	 -
-23 	  	 +<a href="http://otimizacao-de-websites.com">otimizaÃ§Ã£o de sites</a>
+23 	  	 +<a href="http://otimizacao-de-websites.com">otimização de sites</a>
 24 	  	 +<a href="http://desentupidorasanehidro.com.br">desentupidora</a>
 25 	  	 +<a href="http://www.etil.com.br">lampadas</a>
 26 	  	 +<a href="http://asacompanhantessp.com.br">acompanhantes</a>
